BC-573: Nil submission summary fragment